<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:padding="16dp"
    android:gravity="center_vertical"
    android:background="@drawable/list_selector">

    <TextView
        android:id="@+id/requisition_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?android:attr/textColorPrimary"
        android:text="@string/requisition_id"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:text="@string/instructions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/instructions"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/requisition_id"
        app:layout_constraintRight_toLeftOf="@+id/completed_by"
        android:layout_marginEnd="24dp"
        app:layout_constraintHorizontal_bias="0.57"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:text="@string/date_completed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/date_completed"
        android:textSize="14sp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/completed_by"
        app:layout_constraintVertical_chainStyle="packed"/>

    <TextView
        android:text="@string/completed_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/completed_by"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/date_completed"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/num_vials" />

    <TextView
        android:text="@string/num_vials"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/num_vials"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/completed_by" />

</android.support.constraint.ConstraintLayout>