<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginLeft="@dimen/margin_medium"
        android:layout_marginRight="@dimen/margin_medium" >

        <TextView
            android:id="@+id/requisition_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?android:attr/textColorPrimary"
            android:text="@string/requisition_id"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline" />

        <TextView
            android:text="@string/task_template"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/task_template"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/requisition_id" />

        <TextView
            android:text="@string/date_completed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/date_completed"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="14sp" />

        <TextView
            android:text="@string/completed_by"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/completed_by"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:textSize="14sp"
            android:layout_marginBottom="8dp" />
    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>